--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                     <div class="d-flex mt-5 image__construction">
                         <img class="m-auto w-100" style="max-width: 400px;" :src="item.img" :alt="item.name">
                     </div>
+                    <button type="button" class="btn primary__genotipo position-absolute rounded-0 genotipo__font-size-14 bg-light-gray__genotipo border-0" style="right: 0; bottom: 0;">Más información</button>
                 </div>
             </div>
         </div>
